    indicate the dialplan settings are to be obtained from the asterisk
    channel.
  * Made misdn.conf parameter callerid accept the "name" <number> format
    used by the rest of the system.
  * Made use the nationalprefix and internationalprefix misdn.conf
    parameters to prefix any received number from the ISDN link if that
    number has the corresponding Type-Of-Number.
  * Added the following new parameters: unknownprefix, netspecificprefix,
    subscriberprefix, and abbreviatedprefix in misdn.conf to prefix any
    received number from the ISDN link if that number has the corresponding
    Type-Of-Number.
  * Added new dialplan application misdn_command which permits controlling
    the CCBS/CCNR functionality.
  * Added new dialplan function mISDN_CC which permits retrieval of various
    values from an active call completion record.
  * For PTP, you should manually send the COLR of the redirected-to party
    for an incomming redirected call if the incoming call could experience
    further redirects.  Just set the REDIRECTING(to-num,i) = ${EXTEN} and
    set the REDIRECTING(to-pres) to the COLR.  A call has been redirected
    if the REDIRECTING(from-num) is not empty.
  * For outgoing PTP redirected calls, you now need to use the inhibit(i)
    option on all of the REDIRECTING statements before dialing the
    redirected-to party.  You still have to set the REDIRECTING(to-xxx,i)
    and the REDIRECTING(from-xxx,i) values.  The PTP call will update the
    redirecting-to presentation (COLR) when it becomes available.
  * Added outgoing_colp parameter to misdn.conf to filter outgoing COLP
    information.

thirdparty mISDN enhancements
-----------------------------
mISDN has been modified by Digium, Inc. to greatly expand facility message
support to allow:
  * Enhanced COLP support for call diversion and transfer.
  * CCBS/CCNR support.

The latest modified mISDN v1.1.x based version is available at:
http://svn.digium.com/svn/thirdparty/mISDN/trunk